samples/_failures_safe/1761078098_631b42_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_75cb421b.c: In function ‘main’:
./samples/SAFE/__tmp_75cb421b.c:156:5: error: expected expression at end of input
  156 |     if (distance ==
      |     ^~
./samples/SAFE/__tmp_75cb421b.c:156:5: error: expected declaration or statement at end of input
